# petz

./: .dockerignore  .gitignore  Dockerfile.django  IDEAS  LICENSE  MILESTONES.md  PROJECT_REQUIREMENTS.md  README.md  django.Dockerfile  docker-compose-development.yml  docker-compose-migration-run.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
app/: README.md  pyproject.toml  pytest.ini
app/adopter/: admin.py  apps.py  forms.py  models.py  view.py
app/adopter/migrations/: 0001_initial.py  0002_alter_adopter_preferred_pet_size_and_more.py  0002_delete_adopterpreferences.py  0003_alter_adopter_email.py
app/adopter/static_src/: package.json
app/adoption/: admin.py  apps.py  forms.py  models.py  urls.py  view.py  views.py
app/adoption/migrations/: 0001_initial.py  0002_adoptionapplication_option_question_questionnaire_and_more.py  0003_delete_adoption.py
app/adoption/static_src/: package-lock.json  package.json
app/app/: context_processors.py  settings.py  urls.py  view.py
app/blog/: admin.py  filters.py  forms.py  models.py  view.py
app/blog/migrations/: 0001_initial.py  0002_blogpost_is_page_blogpost_short_description_and_more.py  0003_alter_blogpost_content.py
app/pet/: admin.py  filters.py  models.py  view.py
app/pet/migrations/: 0001_initial.py  0002_remove_petimage_pet_pet_images_pet_slug_and_more.py  0003_alter_petimage_image.py  0004_alter_petimage_image.py
app/pet/static_src/: package.json
app/pet/templatetags/: pet_extras.py
app/shelter/: admin.py  filters.py  models.py  view.py
app/shelter/migrations/: 0001_initial.py  0002_alter_shelter_image.py  0003_alter_shelter_phone.py  0004_state_alter_shelter_state.py  0005_alter_shelter_image.py
app/shelter/static_src/: package.json
app/templates/: base.html
app/templates/adoption/: hello_world.html
app/theme/static_src/: package-lock.json
app/theme/templates/: adopter_form.html  (+4 more)
(+44 files in other folders)
