[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Luis Medina <info@lerman.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
django = "^4.2.5"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.2"
black = "^23.9.1"
pytest-django = "^4.5.2"
beautifulsoup4 = "^4.12.2"
pillow = "^10.1.0"
django-htmx = "^1.17.0"
django-filter = "^23.3"
faker = "^25.2.0"
requests = "^2.31.0"
django-jazzmin = "^3.0.0"
django-tinymce = "^4.0.0"
gunicorn = "^22.0.0"
django-compressor = "^4.4"
django-htmlmin = "^0.11.0"
django-resized = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
